# llamaindex-autogen-demo

./: .env.dev  .env.example  .gitignore  Readme.md  app.py  chainlit.md  model-configs.json  package-lock.json  package.json  pyproject.toml
agent_templates/: template_list.py
custom_agents/: customAssistantAgent.py  customUserProxyAgent.py
rag-docs/: README.txt
workspace/: README.md
